<resources>
	<string name="app_name">Poweramp v3 Skin Sample</string>

	<string name="start_with_sample_skin">Start Poweramp\nwith Sample Skin</string>
	<string name="start_with_sample_aaa_skin">Start Poweramp\nwith Sample Skin Alternative Layout</string>

	<string name="installation_ok">Successfully installed</string>

	<string name="skin_sample">Sample Skin</string>
	<string name="skin_author">Sample Skin Author</string>
	<string name="skin_sample_description">This is a sample skin</string>
	<string name="open_theme_settings">Open Theme Settings</string>
	<string name="skin_sample_dark">Sample Dark Skin</string>
	<string name="reverify_skin">(Re)verify the skin</string>


	<string name="skin_divided_waveseek">Divided Waveseek</string>
	<string name="skin_summary_divided_waveseek">Waveseek with the top and bottom parts separated</string>

	<string name="skin_no_aa_blur">No Album Art Blur Background</string>
	<string name="skin_summary_no_aa_blur">Just show default background color</string>

	<string name="skin_static_seekbar">Static Seekbar</string>

	<string name="skin_font">Font</string>
	<string name="_default">Default</string>
	<string name="skin_opensans_font">OpenSans</string>
	<string name="skin_ubuntu_font">Ubuntu</string>
	<string name="skin_fontSize">Font Size</string>
	<string name="skin_searchEditFontSize">Search Edit Font Size</string>
	<string name="skin_title_line2_fontSize">Title/Line2 Font Size</string>
	<string name="skin_summary_fontSize">Font size applied to some controls</string>
	<string name="skin_smaller">Smaller</string>
	<string name="skin_normal">Normal</string>
	<string name="skin_larger">Larger</string>
	<string name="skin_size_2f">Size: %.2f</string>

	<string name="skin_corners">Corners</string>
	<string name="skin_dynamicCorners">Dynamic Corners</string>
	<string name="skin_summary_dynamicCorners">These options work only with Poweramp build 866+. Corner radius set to -1 results in round image</string>
	<string name="skin_summary_866only">These options work only with Poweramp build 866+</string>
	<string name="skin_cornerRadiusAA">Corners For Main Screen Cover</string>
	<string name="skin_cornerRadiusTracks">Corners For Tracks</string>
	<string name="skin_cornerRadiusAlbums">Corners For Albums</string>
	<string name="skin_cornerRadiusOther">Corners For Other Items</string>
	<string name="skin_aa_options">Album Art Options</string>
	<string name="skin_aaMaxYRotation">Max Y Rotation</string>
	<string name="skin_summary_aaMaxYRotation">Max Y rotation for AA item when swiped left/right</string>
	<string name="skin_aaMaxZRotation">Max Z Rotation</string>
	<string name="skin_summary_aaMaxZRotation">Max Z rotation for AA item when swiped left/right</string>
	<string name="skin_aaDenseFactor">Dense Factor</string>
	<string name="skin_summary_aaDenseFactor">Values less than 1 will make items closer to each other</string>
	<string name="skin_aaScale">Scale</string>
	<string name="skin_summary_aaScale">Scale to use for the normal (center of the screen) item</string>
	<string name="skin_aaMaxScale">Max Scale</string>
	<string name="skin_summary_aaMaxScale">Max scale to use for the hidden (out of the screen) item</string>

	<!-- Color rectangle (simple ⬤ symbol + color). NOTE: extra backslash is needed before quotes (\") -->
	<string name="skin_text_color1"><![CDATA[Text color <span style=\"color: #ff0000;\">⬤</span>]]></string>

	<string name="skin_select_text_color">Select Text Color</string>
	<string name="skin_summary_select_text_color">Select one of the colors below</string>

	<string name="skin_select_bg_color">Select Background Color</string>
	<string name="skin_summary_select_bg_color_s">Background Color: %s</string>

	<string name="skin_default">Default</string>
	<string name="skin_summary_default">Default summary</string>

	<string name="skin_red">Red</string>
	<string name="skin_red_w_color"><![CDATA[<span style=\"color: #ff0000;\">⬤</span> Red color]]></string>

	<string name="skin_green">Green</string>
	<string name="skin_green_w_color"><![CDATA[<span style=\"color: #00ff00;\">⬤</span> Green color]]></string>

	<string name="skin_blue">Blue</string>
	<string name="skin_blue_w_color"><![CDATA[<span style=\"color: #0000ff;\">⬤</span> Blue color]]></string>

	<string name="skin_transparent_navbar">Transparent Navbars</string>
	<string name="skin_summary_transparent_navbar">Both, Poweramp and Android navigation bars are transparent</string>

	<string name="skin_sample_aaa">Sample Skin Alternative Layout</string>
	<string name="skin_sample_aaa_description">Plain seekbar, labels don\'t overlap image in main UI and grids</string>

	<string name="skin_seekbar_and_waveseek">Static waveseek + seek bar</string>
	<string name="skin_summart_seekbar_and_waveseek">Both seek widgets visible and operational</string>

	<string name="skin_trans_bg_main">Transparent Background</string>
	<string name="skin_summary_trans_bg_main">Make Main UI background transparent (wallpaper visible)</string>

	<string name="skin_main_mini_spectrum">Mini Spectrum On Main Screen</string>
	<string name="skin_summary_main_mini_spectrum">Demonstrates visualization component on main screen, not polished</string>
	<string name="skin_applied_msg">Skin has been successfully applied!</string>

	<string name="skin_alt_layout">Alternative layout</string>
	<string name="skin_disabled">Disabled</string>
	<string name="skin_summary_alt_layout">Moves track labels below cover, makes on-cover buttons smaller and faded</string>
	<string name="skin_alt_layout_default">Left aligned labels</string>
	<string name="skin_alt_layout_centered">Centered labels</string>
	<string name="skin_volume_knob">Volume Knob</string>
	<string name="skin_summary_volume_knob">Show volume knob on main screen</string>
	<string name="volume">Volume</string>
	<string name="skin_poweramp_not_installed">Poweramp is not installed</string>
	<string name="skin_basic_options">Basic</string>
	<string name="skin_page_1">Skin Sub-Page</string>
	<string name="skin_page_1_summary">More skin options here</string>

	<string name="verify_skin">Verify Skin</string>
	<string name="failed_to_verify">Failed to verify</string>
	<string name="successfully_verified_excl">Successfully verified!</string>
	<string name="skin_verification">Skin Verification</string>
	<string name="verification_in_process">Verification in process...</string>
</resources>
